[package]
name = "nittany_guide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.19.1"
axum = { version = "0.7.4", features = ["multipart"] }
bincode = "1.3.3"
bytes = "1.5.0"
chrono = { version = "0.4.35", features = ["serde"] }
hex = "0.4.3"
pdf-extract = "0.7.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
sled = { version = "0.34.7", features = ["compression"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
